CTA Alignment fixes
- Possibly will want to restructure articles and main content across
the board.

--- a/wp-content/themes/FoundationPress/assets/scss/components/_content.scss
+++ b/wp-content/themes/FoundationPress/assets/scss/components/_content.scss
@@ -4,6 +4,10 @@
     margin-top: 2rem!important;
   }
 }
+article {
+  position: relative;
+  z-index: 100;
+}
 .main-content {
   position: relative;
   z-index: 100;
@@ -138,7 +142,8 @@ $margin: 40px;
       width: 100%; height: auto;
     }
     h6 {
-      margin-top: 0!important;
+      margin-top: 8px!important;
+      margin-left: 40px;
     }
   }
 }
